--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
   --fw-400: 400;
   --fw-700: 700;
 
-  --fs-300: 6rem;
-  --fs-200: 1.5rem;
-  --fs-100: 1rem;
+  --fs-400: 3.5rem;
+  --fs-300: 1.5rem;
+  --fs-200: 1.1rem;
+  --fs-100: .8rem;
 }
 
 * {
@@ -18,7 +19,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  /* outline: 1px solid limegreen!impotant; r */
+  /* outline: 1px solid limegreen !important; */
 }
 
 body {
@@ -52,7 +53,7 @@ body {
 a {
   text-decoration: none;
 
-  font-size: var(--fs-100);
+  font-size: var(--fs-200);
   font-weight: var(--fw-700);
 
   color: var(--clr-secondary-300);
@@ -63,7 +64,7 @@ a:hover {
 }
 
 li {
-  list-style: nome;
+  list-style: none;
 }
 
 .nav-left {
@@ -75,15 +76,15 @@ li {
   display: inline-block;
 }
 
-.logo {
+.logo-img {
   min-height: 3rem;
   max-width: 3rem;
 
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .logo-name {
-  font-size: var(--fs-200);
+  font-size: var(--fs-300);
   font-weight: var(--fw-700);
 
   margin-right: 1.5rem;
@@ -102,16 +103,83 @@ li {
 .btn-login {
   border: none;
   outline: none;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
 
   background: var(--clr-secondary-300);
   color: var(--clr-neutral-100);
 
-  padding: .5rem 3rem;
+  padding: 0.5rem 3rem;
 }
 
-.btn-login:hover {
-  cursor: pointer;
-
+button:hover {
   background: rgba(30, 21, 71, 80%);
+
+  cursor: pointer;
 }
+
+.content-top {
+  margin-top: 4rem;
+}
+
+.content-top h1 {
+  font-size: var(--fs-400);
+}
+
+.send-amount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+
+  max-width: 30%;
+
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  padding: 0.7rem;
+
+  border-radius: 0.5rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.amount {
+  display: flex;
+  flex-direction: column;
+
+  line-height: 2;
+}
+
+.amount small {
+  font-size: var(--fs-100);
+
+  color: var(--clr-neutral-200);
+}
+
+.amount span {
+  font-size: var(--fs-200);
+}
+
+.dollar-sign {
+  display: flex;
+  align-items: center;
+}
+
+.dollar-sign span {
+  font-size: var(--fs-200);
+}
+
+.icon-cad {
+  min-height: 2rem;
+  max-width: 2rem;
+
+  margin-right: .5rem;
+}
+
+.btn-send {
+  border-radius: 0.3rem;
+
+  background: var(--clr-secondary-300);
+  color: var(--clr-neutral-100);
+
+  padding: 1rem 0.8rem;
+}
+
