--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  
   font-family: 'Poppins', sans-serif;
-  /* outline: 1px solid limegreen !important; */
+
+  box-sizing: border-box;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-
   min-height: 100vh;
 
   background: var(--clr-primary-500);
@@ -38,9 +38,10 @@ body {
 .container {
   min-height: 95%;
   width: min(90%, 120rem);
-
   padding: 3rem 4rem;
   margin-inline: auto;
+
+  border-radius: 1.5rem;
 
   background: linear-gradient(
     to top,
@@ -50,7 +51,6 @@ body {
     var(--clr-neutral-100) 100%
   );
 
-  border-radius: 1.5rem;
 }
 
 .navbar {
@@ -60,16 +60,20 @@ body {
 }
 
 a {
-  text-decoration: none;
-
   font-size: var(--fs-200);
   font-weight: var(--fw-700);
-
   color: var(--clr-secondary-300);
+  text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+  color: var(--clr-primary-400);
+
+  transition: .3s;
+}
+
+a.logo-name:hover {
+  color: #000;
 }
 
 li {
@@ -88,15 +92,14 @@ li {
 .logo-img {
   min-height: 3rem;
   max-width: 3rem;
-
   margin-right: 0.5rem;
 }
 
 .logo-name {
+  margin-right: 1.5rem;
+
   font-size: var(--fs-300);
   font-weight: var(--fw-700);
-
-  margin-right: 1.5rem;
 }
 
 .logo-name:hover {
@@ -105,19 +108,18 @@ li {
 
 .nav-right ul li {
   display: inline-block;
-
   margin-right: 1.5rem;
 }
 
 .btn-login {
+  padding: 0.5rem 3rem;
+
   border: none;
   outline: none;
   border-radius: 0.3rem;
 
   background: var(--clr-secondary-300);
   color: var(--clr-neutral-100);
-
-  padding: 0.5rem 3rem;
 }
 
 button:hover {
@@ -139,15 +141,14 @@ button:hover {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-
   max-width: 35%;
-
   margin-top: 5rem;
   padding: 0.7rem;
 
+  border-radius: 0.5rem;
+
   background: var(--clr-neutral-100);
 
-  border-radius: 0.5rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
@@ -160,7 +161,6 @@ button:hover {
 
 .amount small {
   font-size: var(--fs-100);
-
   color: var(--clr-neutral-200);
 }
 
@@ -180,17 +180,16 @@ button:hover {
 .icon-cad {
   min-height: 2rem;
   max-width: 2rem;
-
   margin-right: 0.5rem;
 }
 
 .btn-send {
+  padding: 1rem 0.8rem;
+
   border-radius: 0.3rem;
 
   background: var(--clr-secondary-300);
   color: var(--clr-neutral-100);
-
-  padding: 1rem 0.8rem;
 }
 
 .content-bottom {
@@ -226,22 +225,18 @@ button:hover {
 
 .col-1 p,
 .col-2 p {
+  margin-bottom: 1rem;
   width: 50%;
 
   font-size: var(--fs-100);
-
   color: var(--clr-neutral-200);
-
-  margin-bottom: 1rem;
 }
 
 .col-1 a,
 .col-2 a {
   font-size: var(--fs-200);
   font-weight: var(--fw-700);
-
   color: var(--clr-primary-400);
-
   text-decoration: none;
 }
 
@@ -253,21 +248,23 @@ button:hover {
 
 .money-transfer {
   display: block;
-
   min-height: 100%;
   max-width: 70%;
 }
 
 .hamburger {
-  cursor: pointer;
+  display: none;
   width: 24px;
   height: 24px;
   position: relative;
-  background: none;
-  border: none;
   z-index: 10;
+
+  border: none;
+
+  background: none;
+  
+  cursor: pointer;
   transition: all 0.25s;
-  display: none;
 }
 
 .hamburger-top,
@@ -278,7 +275,9 @@ button:hover {
   left: 0;
   width: 24px;
   height: 2px;
+
   background: #000;
+
   transform: rotate(0);
   transition: all 0.5s;
 }
