--- a/style.css
+++ b/style.css
@@ -107,15 +107,17 @@ li {
   margin-right: 1.5rem;
 }
 
-.btn-login {
-  padding: 0.5rem 3rem;
-
+.btn {
   border: none;
   outline: none;
   border-radius: 0.3rem;
 
   background: var(--clr-secondary-300);
   color: var(--clr-neutral-100);
+}
+
+.btn-login {
+  padding: 0.5rem 3rem;
 }
 
 button:hover {
@@ -181,11 +183,6 @@ button:hover {
 
 .btn-send {
   padding: 1rem 0.8rem;
-
-  border-radius: 0.3rem;
-
-  background: var(--clr-secondary-300);
-  color: var(--clr-neutral-100);
 }
 
 .content-bottom {
